# event_ticket

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: .gitkeep
app/: main.py
app/api/: router.py
app/api/v1/: admin.py  auth.py  checkout.py  events.py  orders.py
app/core/: __init__.py  config.py  dependencies.py  error_handlers.py  exceptions.py  security.py
app/db/: __init__.py  mixins.py  session.py
app/infrastructure/: __init__.py  cache.py  celery_app.py  cloudinary_client.py  rate_limiter.py
app/models/: __init__.py  admin.py  event.py  order.py  user.py
app/repositories/: admin_repository.py  event_repository.py  order_repository.py  user_repository.py
app/schemas/: auth.py  checkout.py  common.py  event.py  order.py
app/services/: auth_service.py  checkout_service.py  event_service.py  order_service.py
app/tasks/: media_tasks.py
